Bug 220169 - sbin/devd/client_test:stream possible false negative failure
Summary: sbin/devd/client_test:stream possible false negative failure
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: tests (show other bugs)
Version: 11.0-STABLE
Hardware: Any Any
: --- Affects Only Me
Assignee: Alan Somers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-20 18:38 UTC by Glen Barber
Modified: 2017-08-25 01:49 UTC (History)
2 users (show)

See Also:
asomers: mfc-stable11?
asomers: mfc-stable10?


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Glen Barber freebsd_committer freebsd_triage 2017-06-20 18:38:28 UTC
This appears to be a false negative, as far as I can tell:

===> sbin/devd/client_test:stream
Result:     failed: /releng/scripts-release/chroots/11/amd64/release/sbin/devd/tests/client_test.c:82: 0 != error
Start time: 2017-06-20T16:31:23.832393Z
End time:   2017-06-20T16:31:23.836672Z
Duration:   0.004s

Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    is_exclusive = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
===> Failed tests
sbin/devd/client_test:stream  ->  failed: /releng/scripts-release/chroots/11/amd64/release/sbin/devd/tests/client_test.c:82: 0 != error  [0.004s]
===> Summary
Results read from /root/.kyua/store/results.usr_tests.20170620-155827-682012.db
Test cases: 1 total, 0 skipped, 0 expected failures, 0 broken, 1 failed
Start time: 2017-06-20T16:31:23.832393Z
End time:   2017-06-20T16:31:23.836672Z
Total time: 0.004s
Comment 1 Alan Somers freebsd_committer freebsd_triage 2017-06-20 19:05:33 UTC
Can you please paste the output of "service devd status" on the system where you saw this failure?
Comment 2 commit-hook freebsd_committer freebsd_triage 2017-06-20 19:35:16 UTC
A commit references this bug:

Author: asomers
Date: Tue Jun 20 19:34:22 UTC 2017
New revision: 320166
URL: https://svnweb.freebsd.org/changeset/base/320166

Log:
  Require devd to be running for its ATF tests to run

  The ATF tests communicate with the system's running devd

  PR:		220169
  Reported by:	gjb
  MFC after:	3 weeks
  Sponsored by:	Spectra Logic Corp

Changes:
  head/sbin/devd/tests/Makefile
Comment 3 commit-hook freebsd_committer freebsd_triage 2017-07-06 17:35:16 UTC
A commit references this bug:

Author: asomers
Date: Thu Jul  6 17:34:53 UTC 2017
New revision: 320747
URL: https://svnweb.freebsd.org/changeset/base/320747

Log:
  MFC r320165-r320167

  r320165:
  devd(8): Remove pidfile on shutdown

  Sponsored by:	Spectra Logic Corp

  r320166:
  Require devd to be running for its ATF tests to run

  The ATF tests communicate with the system's running devd

  PR:		220169
  Reported by:	gjb
  Sponsored by:	Spectra Logic Corp

  r320167:
  zfsd(8): Remove pidfile on shutdown

  Sponsored by:	Spectra Logic Corp

Changes:
_U  stable/11/
  stable/11/cddl/usr.sbin/zfsd/zfsd.cc
  stable/11/sbin/devd/devd.cc
  stable/11/sbin/devd/tests/Makefile
Comment 4 commit-hook freebsd_committer freebsd_triage 2017-07-31 22:28:54 UTC
A commit references this bug:

Author: asomers
Date: Mon Jul 31 22:28:33 UTC 2017
New revision: 321827
URL: https://svnweb.freebsd.org/changeset/base/321827

Log:
  MFC r320165-r320166

  r320165:
  devd(8): Remove pidfile on shutdown

  Sponsored by:	Spectra Logic Corp

  r320166:
  Require devd to be running for its ATF tests to run

  The ATF tests communicate with the system's running devd

  PR:		220169
  Reported by:	gjb
  Sponsored by:	Spectra Logic Corp

Changes:
_U  stable/10/
  stable/10/sbin/devd/devd.cc
  stable/10/sbin/devd/tests/Makefile