MFC r320165-r320167

r320165:
devd(8): Remove pidfile on shutdown

Sponsored by:	Spectra Logic Corp

r320166:
Require devd to be running for its ATF tests to run

The ATF tests communicate with the system's running devd

PR:		220169
Reported by:	gjb
Sponsored by:	Spectra Logic Corp

r320167:
zfsd(8): Remove pidfile on shutdown

Sponsored by:	Spectra Logic Corp